syntax = "proto3";

package chat;

option go_package = "/api;api";

service ChatService {
    rpc SendMessage (MessageRequest) returns (MessageResponse);
    rpc StreamMessages (User) returns (stream MessageResponse);
}

message MessageRequest {
    string user = 1;
    string content = 2;
}

message MessageResponse {
    string user = 1;
    string content = 2;
}

message User {
    string name = 1;
}